# stacktrace

./: CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
stacktrace/: CMakeLists.txt  from_exception.cpp
vcpkg_config/overlay_ports/opentelemetry-cpp/: portfile.cmake  support_absl_cxx17.patch  vcpkg.json
vcpkg_config/overlay_triplets/: x64-linux-clang.cmake
